# psychopy-apparatus

./: .gitignore  CITATION.cff  LICENSE  README.html  README.md  pyproject.toml
documentation/: hardware.md
experiments/experiment-1/: domainLoop.xlsx  experiment-1-legacy-browsers.js  experiment-1.js  experiment-1.psyexp  experiment-1_lastrun.py  experiment-test_functions.psyexp  experiment-test_functions_lastrun.py  index.html  levelBalance.xlsx  mvc_block.xlsx  sliderResponse.xlsx  targetColorBalance.xlsx
experiments/experiment-1/data/: pilot_maxForce_2026-02-27_13h38.03.522.csv  pilot_maxForce_2026-02-27_13h38.03.522.psydat  pilot_maxForce_2026-02-27_13h38.03.522_force_long.tsv  pilot_maxForce_2026-02-27_13h42.33.108.csv  pilot_maxForce_2026-02-27_13h42.33.108.psydat  pilot_maxForce_2026-02-27_13h42.33.108_force_long.tsv  pilot_maxForce_2026-02-27_13h50.52.946.csv  pilot_maxForce_2026-02-27_13h50.52.946.psydat  pilot_maxForce_2026-02-27_13h50.52.946_force_long.tsv  pilot_maxForce_2026-02-27_13h58.50.085.csv  pilot_maxForce_2026-02-27_13h58.50.085.psydat  pilot_maxForce_2026-02-27_13h58.50.085_force_long.tsv  pilot_maxForce_2026-02-27_14h14.15.210.csv  pilot_maxForce_2026-02-27_14h14.15.210.psydat  pilot_maxForce_2026-02-27_14h14.15.210_force_long.tsv  pilot_maxForce_2026-02-27_14h16.59.320.csv  pilot_maxForce_2026-02-27_14h16.59.320.psydat  pilot_maxForce_2026-02-27_14h16.59.320_force_long.tsv
experiments/experiment-steroids/: experiment-1.psyexp  experiment-1_lastrun.py  generate_distractors.py  maxForce.py  oo_domain.xlsx  oo_level.xlsx  oo_mvc_type.xlsx  oo_slider.xlsx
experiments/experiment-steroids/data/: 201538_maxForce_2026-04-27_09h30.09.732.csv  201538_maxForce_2026-04-27_09h30.09.732.psydat  201538_maxForce_2026-04-27_09h30.09.732_design.csv  304960_maxForce_2026-04-27_10h48.55.342.csv  304960_maxForce_2026-04-27_10h48.55.342.psydat  304960_maxForce_2026-04-27_10h48.55.342_design.csv  627229_maxForce_2026-04-27_09h47.12.983.csv  627229_maxForce_2026-04-27_09h47.12.983.psydat  627229_maxForce_2026-04-27_09h47.12.983_design.csv  627229_maxForce_2026-04-27_09h47.12.983_force_long.tsv
experiments/tests/: performance-test.psyexp  performance-test.py
experiments/tests/data/: pilot_maxForce_2026-02-27_16h34.46.678.csv  pilot_maxForce_2026-02-27_16h34.46.678.psydat  pilot_maxForce_2026-02-27_16h34.46.678_force_long.tsv
firmware/: esp_client.ino  esp_server.ino
firmware/esp_chip_info_dump/: esp_chip_info_dump.ino
firmware/esp_client/: esp_client.ino
firmware/esp_server_experimental3_modular/: README.md  apparatus_config.h  apparatus_protocol.h  esp_server_experimental3_modular.ino  force_service.cpp  force_service.h  motor_control.cpp  motor_control.h  pairing_radio.cpp  pairing_radio.h  protocol_io.cpp  protocol_io.h  protocol_utils.cpp  protocol_utils.h
firmware/tests/: live_force_readout.py  server_control_ui.py  test_force.py  test_reed.py
psychopy_apparatus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
psychopy_apparatus/components/: apparatusDeviceBackend.py
psychopy_apparatus/components/apparatusForce/: __init__.py
psychopy_apparatus/components/apparatusLED/: __init__.py
psychopy_apparatus/components/apparatusReed/: __init__.py
psychopy_apparatus/hardware/: apparatus.py  apparatusDevice.py
psychopy_apparatus/utils/: protocol.py
tests/: test_protocol_validation.py
