[project]
# the name of your plugin (required)
name = "psychopy-apparatus"
# the current version of the plugin (required)
version = "0.0.1" 
# a brief description of what your plugin does
description = "PsychoPy plugin to operate the \"Apparatus,\" a custom device for measuring and manipulating physical and cognitive effort."
# link to the README.md file for a longer description of the project
readme = "README.md"
# contact information for yourself and anyone else who worked on the plugin 
authors = [
  { name = "Maik Bieleke", email = "maik.bieleke@uni-konstanz.de" },
]
# a license tells other people how to use your code and protects you from stealing
license = { text = "MIT" }
# add any packages which your plugin needs in order to run
dependencies = []

[project.urls]
# some handy links to help people find your plugin's documentation
homepage = "https://github.com/psychopy/psychopy-apparatus"
changelog = "https://github.com/psychopy/psychopy-apparatus/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# dependencies for building the docs
docs = [
  "psychopy",
  "psychopy-sphinx-theme",
  "sphinx",
  "furo",
]
# dependencies for running the test suite
tests = [
  "psychopy",
  "pytest",
]

[project.entry-points."psychopy.experiment.components"]
# if you want a Component to appear in the "Components" panel, add its class here
ApparatusLEDComponent = "psychopy_apparatus.components.apparatusLED:ApparatusLEDComponent"
ApparatusForceComponent = "psychopy_apparatus.components.apparatusForce:ApparatusForceComponent"
ApparatusReedComponent = "psychopy_apparatus.components.apparatusReed:ApparatusReedComponent"

# [project.entry-points."psychopy.experiment.routines"]
# # if you want a Standalone Routine to appear in the "Components" panel, add its class here
# ExampleStandaloneRoutine = "psychopy_apparatus.routines.exampleStandaloneRoutine:ExampleStandaloneRoutine"

[project.entry-points."psychopy.hardware"]
# if you want something to be importable from psychopy.hardware, add it here
ApparatusDevice = "psychopy_apparatus.hardware.apparatusDevice:ApparatusDevice"

[tool.setuptools.package-data]
# any resources you want including in the package, add their file extensions here (e.g. "*.wav" if you want audio files)
"*" = ["*.png"] 

[tool.setuptools.packages.find]
# any folders to ignore when building the Python package for this plugin
exclude = ["docs*", "docs_src*", "tests*"]
